Fix UI on tablets

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -12,6 +12,10 @@
   .info {
     flex-grow: 1;
   }
+
+  .express-interest {
+    text-align: right;
+  }
 }
 
 .interested-users {
@@ -55,7 +59,6 @@
     .express-interest {
       order: 2;
       flex-grow: 1;
-      text-align: right;
     }
   }
 
